# vsgGIS

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
.obs/: workflows.yml
applications/: CMakeLists.txt
applications/vsggis/: CMakeLists.txt  test.sh  vsggis.cpp  vsggis_old.cpp
include/vsgGIS/: Export.h  GDAL.h  ReaderWriter_GDAL.h  TileDatabase.h  gdal_utils.h  meta_utils.h
src/: CMakeLists.txt
src/vsgGIS/: CMakeLists.txt  GDAL.cpp  ReaderWriter_GDAL.cpp  TileDatabase.cpp  gdal_utils.cpp  meta_utils.cpp  vsgGISConfig.cmake.in
src/vsgGIS/shaders/: simple_tile_frag.cpp  simple_tile_vert.cpp
